--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
@@ -1,7 +1,37 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="n1a-i9-LZE">
+            <objects>
+                <viewController id="P7I-hp-eiF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fuw-al-FDS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-PY-DJW">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="gkd-PY-DJW" firstAttribute="top" secondItem="fuw-al-FDS" secondAttribute="top" id="9kr-Fb-kGk"/>
+                            <constraint firstItem="zb0-rL-HrQ" firstAttribute="trailing" secondItem="gkd-PY-DJW" secondAttribute="trailing" id="Bfp-qD-KVM"/>
+                            <constraint firstItem="gkd-PY-DJW" firstAttribute="leading" secondItem="zb0-rL-HrQ" secondAttribute="leading" id="W9d-B6-Bn0"/>
+                            <constraint firstAttribute="bottom" secondItem="gkd-PY-DJW" secondAttribute="bottom" id="v7o-sP-oJ3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zb0-rL-HrQ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NXc-dc-BtQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-34" y="53"/>
+        </scene>
+    </scenes>
 </document>
