--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
@@ -7,31 +7,87 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Survey Life Style EntryVC-->
         <scene sceneID="n1a-i9-LZE">
             <objects>
-                <viewController id="P7I-hp-eiF" sceneMemberID="viewController">
+                <viewController id="P7I-hp-eiF" customClass="SurveyLifeStyleEntryVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fuw-al-FDS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-PY-DJW">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.51372549020000002" green="0.80000000000000004" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xjy-OH-M29">
+                                <rect key="frame" x="62.5" y="107" width="250" height="25.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이제부터" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7R-3g-rwM">
+                                        <rect key="frame" x="0.0" y="0.0" width="73" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" 라이프 스타일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ykK-wX-bkN">
+                                        <rect key="frame" x="73" y="0.0" width="118" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <color key="textColor" red="0.92156862745098034" green="0.94117647058823528" blue="0.69019607843137254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="에 관한" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1S-1z-mou">
+                                        <rect key="frame" x="191" y="0.0" width="59" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="질문들을 드릴게요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Urn-hU-Cb5">
+                                <rect key="frame" x="109" y="143.5" width="157" height="25.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xNW-es-9bP">
+                                <rect key="frame" x="67" y="230" width="246" height="270"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzZ-Be-DPP">
+                                <rect key="frame" x="116.5" y="600" width="142" height="49"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="T6p-X5-HB1"/>
+                                    <constraint firstAttribute="width" constant="142" id="gK8-2w-b7z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="다음">
+                                    <color key="titleColor" red="0.074509803921568626" green="0.6470588235294118" blue="0.6588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="gkd-PY-DJW" firstAttribute="top" secondItem="fuw-al-FDS" secondAttribute="top" id="9kr-Fb-kGk"/>
                             <constraint firstItem="zb0-rL-HrQ" firstAttribute="trailing" secondItem="gkd-PY-DJW" secondAttribute="trailing" id="Bfp-qD-KVM"/>
+                            <constraint firstItem="Urn-hU-Cb5" firstAttribute="top" secondItem="Xjy-OH-M29" secondAttribute="bottom" constant="11" id="SSm-7k-k96"/>
                             <constraint firstItem="gkd-PY-DJW" firstAttribute="leading" secondItem="zb0-rL-HrQ" secondAttribute="leading" id="W9d-B6-Bn0"/>
+                            <constraint firstItem="zb0-rL-HrQ" firstAttribute="bottom" secondItem="fzZ-Be-DPP" secondAttribute="bottom" constant="18" id="fbc-Gl-Abb"/>
+                            <constraint firstItem="Xjy-OH-M29" firstAttribute="top" secondItem="zb0-rL-HrQ" secondAttribute="top" constant="107" id="hiF-1f-y1p"/>
+                            <constraint firstItem="Urn-hU-Cb5" firstAttribute="centerX" secondItem="fuw-al-FDS" secondAttribute="centerX" id="kpJ-Bu-DUh"/>
+                            <constraint firstItem="Xjy-OH-M29" firstAttribute="centerX" secondItem="fuw-al-FDS" secondAttribute="centerX" id="u3n-0U-NVX"/>
                             <constraint firstAttribute="bottom" secondItem="gkd-PY-DJW" secondAttribute="bottom" id="v7o-sP-oJ3"/>
+                            <constraint firstItem="fzZ-Be-DPP" firstAttribute="centerX" secondItem="fuw-al-FDS" secondAttribute="centerX" id="vWQ-TF-OnS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zb0-rL-HrQ"/>
                     </view>
+                    <connections>
+                        <outlet property="nextBtn" destination="fzZ-Be-DPP" id="dVM-bx-47M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NXc-dc-BtQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="53"/>
+            <point key="canvasLocation" x="-34.399999999999999" y="52.623688155922046"/>
         </scene>
     </scenes>
 </document>
